--- a/index.html
+++ b/index.html
@@ -2,58 +2,128 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>swiper</title>
-    <link rel="stylesheet" href="./reset.css">
-    <style>
+    <title>Title</title>
+    <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+            text-decoration: none;
+        }
+
+        body {
+            padding: 20px;
+        }
+
         #container {
             position: relative;
+            width: 600px;
+            height: 400px;
+            border: 3px solid #333;
             overflow: hidden;
         }
-        ul {
-            position: relative;
-            transition: left .3s;
-        }
-        li {
-            float: left;
-            height:1200px;
-        }
-        li img {
-            width:100%;
-        }
-        .arrow div {
+
+        #list {
             position: absolute;
-            top:40%;
-            transform: translate(-50%,0);
-            width:50px;
-            height:50px;
-            border-radius: 32px;
-            background-color: #fff;
-            text-align: center;
-            line-height:50px;
-            font-size:24px;
+            z-index: 1;
+            width: 4200px;
+            height: 400px;
+        }
+
+        #list li {
+            float: left;
+            width: 600px;
+        }
+
+        #list img {
+            width: 100%;
+            height: 400px;
+        }
+
+        #buttons {
+            position: absolute;
+            left: 250px;
+            bottom: 20px;
+            z-index: 2;
+            height: 10px;
+            width: 100px;
+        }
+
+        #buttons span {
+            float: left;
+            margin-right: 5px;
+            width: 10px;
+            height: 10px;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            background: #333;
             cursor: pointer;
         }
-        #prev-arrow {
-            left:20px;
+
+        #buttons .on {
+            background: orangered;
         }
-        #next-arrow {
-            right:20px;
+
+        .arrow {
+            position: absolute;
+            top: 180px;
+            z-index: 2;
+            display: none;
+            width: 40px;
+            height: 40px;
+            font-size: 36px;
+            font-weight: bold;
+            line-height: 39px;
+            text-align: center;
+            color: #fff;
+            background-color: RGBA(0, 0, 0, .3);
+            cursor: pointer;
+        }
+
+        .arrow:hover {
+            background-color: RGBA(0, 0, 0, .7);
+        }
+
+        #container:hover .arrow {
+            display: block;
+        }
+
+        #prev {
+            left: 20px;
+        }
+
+        #next {
+            right: 20px;
         }
     </style>
 </head>
 <body>
+
     <div id="container">
-        <ul>
-            <li><img src="./images/bg-01.jpg" alt=""></li>
-            <li><img src="./images/gakki-1.jpg" alt=""></li>
-            <li><img src="./images/gakki-4.jpg" alt=""></li>
-            <li><img src="./images/gakki-8.jpg" alt=""></li>
+        <ul id="list" style="left: -600px;">
+            <li><img src="images/img1.jpg" alt="1"/></li>
+            <li><img src="images/img2.jpg" alt="2"/></li>
+            <li><img src="images/img3.jpg" alt="3"/></li>
+            <li><img src="images/img4.jpg" alt="4"/></li>
+            <li><img src="images/img5.png" alt="5"/></li>
         </ul>
-        <div class="arrow">
-            <div id="prev-arrow">&lt;</div>
-            <div id="next-arrow">&gt;</div>
+        <div id="buttons">
+            <span index="1" class="on"></span>
+            <span index="2"></span>
+            <span index="3"></span>
+            <span index="4"></span>
+            <span index="5"></span>
         </div>
+        <a href="javascript:;" id="prev" class="arrow">&lt;</a>
+        <a href="javascript:;" id="next" class="arrow">&gt;</a>
     </div>
-    <script src="./swiper.js"></script>
+    <script src="./swiper2.js"></script>
+    <script>
+      var swiper = new Swiper('container')
+      swiper.swiper({
+        auto: true,
+        speed: 300,
+        delay: 3000
+      })
+    </script>
 </body>
 </html>
