--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         #list {
             position: absolute;
+            left:-600px;
             z-index: 1;
             width: 4200px;
             height: 400px;
@@ -99,7 +100,7 @@
 <body>
 
     <div id="container">
-        <ul id="list" style="left: -600px;">
+        <ul id="list">
             <li><img src="images/img1.jpg" alt="1"/></li>
             <li><img src="images/img2.jpg" alt="2"/></li>
             <li><img src="images/img3.jpg" alt="3"/></li>
