--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <a href="javascript:;" id="prev" class="arrow">&lt;</a>
         <a href="javascript:;" id="next" class="arrow">&gt;</a>
     </div>
-    <script src="./swiper2.js"></script>
+    <script src="./swiper.js"></script>
     <script>
       var swiper = new Swiper('container')
       swiper.swiper({
